fixed spacing - web version 1 complete

--- a/css/creative.css
+++ b/css/creative.css
@@ -352,6 +352,7 @@ footer {
   width: 45vw;
   position: absolute;
   left: 0;
+  margin-top: -15vw;
 }
 
 .right-align {
@@ -376,7 +377,7 @@ footer {
 }
 
 .large-buffer {
-  margin-top: 50px;
+  margin-top: 80px;
 }
 
 .product-box {
