--- a/css/particles.css
+++ b/css/particles.css
@@ -9,5 +9,5 @@ canvas{ display: block; vertical-align: bottom; } */
 	background-repeat: no-repeat; 
 	background-size: auto; 
 	background-position: 50% 50%;
-	height: 87.85%;
+	height: 87%;
 }
